# axum-auth-crud-yew-app

./: .env  .gitignore  Cargo.toml  README.md  migrations
client/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/assets/styles/: tailwind.css
client/src/: app.rs  helpers.rs  layout.rs  main.rs  router.rs  store.rs
client/src/api/: mod.rs  task_api.rs  types.rs  user_api.rs
client/src/components/: mod.rs
client/src/components/tasks/: mod.rs  task_card.rs
client/src/components/ui/: alert.rs  form_input.rs  header_component.rs  loading_button.rs  mod.rs  sidebar_component.rs  spinner.rs  textarea_input.rs
client/src/pages/: home_page.rs  login_page.rs  mod.rs  not_found.rs  profile_page.rs  register_page.rs  tasks_page.rs
client/src/pages/task_form_page/: mod.rs  task_form_page.rs
src/: config.rs  main.rs  middleware.rs  models.rs  response.rs  schemas.rs  validators.rs
src/handlers/: mod.rs  tasks_handlers.rs  users_handlers.rs
src/routes/: mod.rs  route_healthchecker.rs  routes_tasks.rs  routes_users.rs
