[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.3"
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.8.1"
reqwasm = "0.5.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "ScrollToOptions", "ScrollBehavior", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.3"
